k8s/apps/mgmt/authelia/authelia.yaml
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: authelia
          image: authelia/authelia:latest
          args: ["--config", "/config/config-files/configuration.yml"]
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: data
              mountPath: /config
            - name: config-files
              mountPath: /config/config-files
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authelia-data
        - name: config-files
          secret:
            secretName: authelia-config-files
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: mgmt
spec:
  selector:
    app: authelia
  ports:
    - port: 9091
      targetPort: 9091
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: mgmt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${DOMAIN_NAME}`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: mgmt
spec:
  forwardAuth:
    address: http://authelia.mgmt.svc.cluster.local:9091/api/verify?rd=https://auth.${DOMAIN_NAME}/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
